--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body{
 .card{
     background-color: var(--dark-desaturated-blue);
     border-radius: 0.5rem;
-    overflow: hidden; /*to hide the bullets for the list*/
+    overflow: hidden; 
     display: flex;
     flex-direction: column;
     max-width: 25rem;
@@ -95,4 +95,67 @@ ul{
     text-transform: uppercase;
 }
 
+@media only screen and (min-width: 26.25em){
+    ul{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 0.9rem;
+    }
+}
 
+@media only screen and (min-width: 48em){
+    body{
+        text-align: left;
+    }
+    .container{
+        min-width: 100vw;
+    }
+    .card{
+        display: flex;
+        flex-direction: row-reverse;
+        max-width: 45rem;
+        margin: 5.5rem 1.5rem;
+    }
+    .card-image{
+        flex: 1 1 0%;
+    }
+    .card-text{
+        flex: 1 1 0%;
+        margin: 2rem 1rem 1rem;
+    }
+}
+
+@media only screen and (min-width: 64em){
+    .card {
+        max-width: 69.375rem;
+    }
+    .card-text > *{
+        margin-left: 4.375rem;
+        margin-right: 8.2rem;
+
+    }
+    .main-heading{
+        margin-left: 4.6875rem;
+        margin-right: 4.375rem;
+        margin-top: 4.375rem;
+        font-size: 2.25rem;
+    }
+    .main-paragraph{
+        margin-top: 1.5rem;
+        margin-bottom: 4.375rem;
+        line-height: 1.65;
+        margin-left: 4.375rem;
+        margin-right: 7rem;
+    }
+    ul{
+        margin-bottom: 3.75rem;
+
+    }
+    li{
+        font-weight: bold;
+    }
+    .stat-heading{
+        margin-bottom: 0;
+        font-weight: 500;
+    }
+}
